@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020170609"
-#define public MagickPackageReleaseDate "snapshot-20170609"
+#define public MagickPackageVersionAddendum ".020170618"
+#define public MagickPackageReleaseDate "snapshot-20170618"
