@@ -1,3 +1,8 @@
+2017-06-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* wand/magick_wand.c (MagickSetImageOrientation): Eliminate use of
+	snprintf, which is not supported by older Visual Studio.
+
 2017-06-09  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
 
 	* coders/png.c: Accept exIf chunks whose data segment
